fixed spacing issue within the cards.  added height and width in cards;

--- a/client/src/styles/components/Login-Page.scss
+++ b/client/src/styles/components/Login-Page.scss
@@ -21,12 +21,15 @@
 		padding: 2rem;
 		font-family: 'Lato';
 		background: white;
+
 		border-radius: 3px;
 		box-shadow: 1px 8px 14px rgba(0, 0, 0, .4);
 		transition: height .3s ease-in-out, width .3s ease-in-out;
 	}
 
 	&__container {
+		width: 100%;
+		height: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
@@ -63,5 +66,14 @@
 		top: 8rem;
 		right: 5rem;
 		text-decoration: none;
+	}
+
+	&__footer-message {
+		text-align: center;
+		white-space: nowrap;
+		// position: fixed;
+		// bottom: 10px;
+		// left: 50%;
+		// transform: translateX(-50%);
 	}
 }
