--- a/client/src/styles/components/Register-Page.scss
+++ b/client/src/styles/components/Register-Page.scss
@@ -11,6 +11,8 @@
 		url('./images/login-bg.jpg') no-repeat center / cover;
 
 	&__container {
+		width: 100%;
+		height: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
